src/test/ui/macros/macro-attribute.rs
#[doc = $not_there] //~ ERROR expected a literal or ::-separated path
fn main() { }
